--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="toast">Toast</string>
     <string name="snack_bar">SnackBar</string>
     <string name="alert_dialog">Alert Dialog</string>
+    <string name="add_data">Add Data</string>
 </resources>
